<?xml version="1.0"?>
<package format="2">
  <name>tesseract_collision</name>
  <version>0.1.0</version>
  <description>The tesseract_collision package</description>

  <maintainer email="Levi.Armstrong@swri.org">Levi Armstrong</maintainer>

  <license>Apache 2.0</license>
  <license>BSD</license>
  <author>Levi Armstrong</author>
  <author>John Schulman</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>bullet3_ros</depend>
  <depend>fcl_ros</depend>
  <depend>libconsole-bridge-dev</depend>

  <test_depend>gtest</test_depend>
  <test_depend>rostest</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
