<?xml version="1.0"?>
<package format="2">
  <name>tesseract_collision</name>
  <version>0.14.0</version>
  <description>The tesseract_collision package</description>
  <maintainer email="Levi.Armstrong@swri.org">Levi Armstrong</maintainer>
  <license>Apache 2.0</license>
  <author>Levi Armstrong</author>

  <!-- Following recommendations of REP 136 -->
  <buildtool_depend>cmake</buildtool_depend>

  <depend>tesseract_geometry</depend>
  <depend>tesseract_common</depend>
  <build_depend>ros_industrial_cmake_boilerplate</build_depend>

  <build_depend>eigen</build_depend>
  <build_export_depend>eigen</build_export_depend>

  <depend>yaml-cpp</depend>
  <depend>bullet</depend>
  <depend>bullet-extras</depend>
  <depend>fcl</depend>
  <depend>libconsole-bridge-dev</depend>
  <depend>tesseract_support</depend>
  <depend>libomp-dev</depend>

  <build_depend>libboost-system-dev</build_depend>
  <build_export_depend>libboost-system-dev</build_export_depend>
  <exec_depend>libboost-system</exec_depend>

  <build_depend>libboost-program-options-dev</build_depend>
  <build_export_depend>libboost-program-options-dev</build_export_depend>
  <exec_depend>libboost-program-options</exec_depend>

  <test_depend>benchmark</test_depend>
  <test_depend>gtest</test_depend>
  <test_depend>tesseract_scene_graph</test_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
