<?xml version="1.0"?>
<package format="2">
  <name>tesseract_common</name>
  <version>0.14.0</version>
  <description>Contains common macros, utils and types used throughout</description>
  <maintainer email="Levi.Armstrong@swri.org">Levi Armstrong</maintainer>
  <license>Apache 2.0</license>
  <author>Levi Armstrong</author>

  <!-- Following recommendations of REP 136 -->
  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>ros_industrial_cmake_boilerplate</build_depend>
  <build_depend>eigen</build_depend>
  <build_export_depend>eigen</build_export_depend>
  <depend>libconsole-bridge-dev</depend>
  <depend>tinyxml2</depend>
  <depend>yaml-cpp</depend>

  <build_depend>libboost-system-dev</build_depend>
  <build_export_depend>libboost-system-dev</build_export_depend>
  <exec_depend>libboost-system</exec_depend>

  <build_depend>libboost-filesystem-dev</build_depend>
  <build_export_depend>libboost-filesystem-dev</build_export_depend>
  <exec_depend>libboost-filesystem</exec_depend>

  <build_depend>libboost-serialization-dev</build_depend>
  <build_export_depend>libboost-serialization-dev</build_export_depend>
  <exec_depend>libboost-serialization</exec_depend>

  <test_depend>gtest</test_depend>
  <test_depend>lcov</test_depend>
  <test_depend>libclang-dev</test_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
